Update 'ynecjhu1s-java-quarkus' component image to: quay.io/rhtap_qe/rhtap-qe-java-quarkus:df722f69204d3e379aadc0a9accbfc987f4abfad@sha256:fcf0d9b8f74ab3e0ad89322a2717c2cf3f07c47230ba1391512482f17cf1a93b

--- a/components/ynecjhu1s-java-quarkus/overlays/development/deployment-patch.yaml
+++ b/components/ynecjhu1s-java-quarkus/overlays/development/deployment-patch.yaml
@@ -1,16 +1,16 @@
 apiVersion: apps/v1
 kind: Deployment
-metadata:   
-  annotations:  
+metadata:
+  annotations:
     tad.gitops.set/image: ".spec.template.spec.containers[0].image"
     tad.gitops.get/image: ".spec.template.spec.containers[0].image"
     tad.gitops.set/replicas: ".spec.replicas"
-    tad.gitops.get/replicas: ".spec.replicas" 
+    tad.gitops.get/replicas: ".spec.replicas"
   name: ynecjhu1s-java-quarkus
 spec:
-  replicas: 1 
-  template: 
+  replicas: 1
+  template:
     spec:
       containers:
-      - image: quay.io/redhat-appstudio/dance-bootstrap-app:latest
-        name: container-image  
+        - image: quay.io/rhtap_qe/rhtap-qe-java-quarkus:df722f69204d3e379aadc0a9accbfc987f4abfad@sha256:fcf0d9b8f74ab3e0ad89322a2717c2cf3f07c47230ba1391512482f17cf1a93b
+          name: container-image
